--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <!-- 引入 ElementUI 样式 -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.9/lib/theme-chalk/index.css">
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
@@ -21,9 +21,9 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <!-- 在引入 ElementUI 之前引入 Vue，会注入全局变量 Vue  -->
-  <script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue@2.6.11/dist/vue.min.js"></script>
   <!-- 引入 ElementUI 组件库，会注入全局变量 -->
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="https://unpkg.com/element-ui@2.15.9/lib/index.js"></script>
 </body>
 
 </html>
